# MOCO_APP

./: .gitignore  Cargo.toml  Makefile  README.md  copy_android.sh
.cargo/: config
client/: App.js  README.md  app.json  package-lock.json  package.json
client/android/: gradle.properties  settings.gradle
client/android/app/: BUCK  build.gradle
client/components/: colors.js  fonts.js  round_button.js  tab_navigation.js
client/components/device/: device_entry.js  screen.js
client/components/general/: button.js  date_time_picker.js  drawer.js  header.js  icons.js  input.js  screen_style.js  text_switch.js
client/components/navigation/: navigator.js  routes.js  tabs.js
client/components/schedule/: add_finish.js  add_manual.js  entry.js  repititionItem.js  schedule.js  screen.js
client/components/screens/: addMainScreen.js  device.js  mainScreen.js  navigation.js
client/components/store/: constants.js  index.js
client/ios/WakeAlarm/: AppDelegate.m  Info.plist
client/ios/WakeAlarm.xcodeproj/: project.pbxproj
client/ios/WakeAlarmTests/: WakeAlarmTests.m
client/store/: constants.js  index.js
common/: Cargo.toml
common/src/: lib.rs
jsons/: Readme.md  led_status.json  manuel_control.json  simple_command_get_led_status.json
paper/: application_paper.tex  moco.bib  smart_led_strap.aux  smart_led_strap.bbl  smart_led_strap.blg  smart_led_strap.fdb_latexmk  smart_led_strap.fls  smart_led_strap.tex
server/: Cargo.toml  README.md  Rocket.toml
server/migrations/2018-12-10-200048_initial/: down.sql  up.sql
server/src/: communication.rs  led.rs  lib.rs  main.rs  models.rs  schema.rs  web.rs
server/src/led/: cache.rs  controller.rs  message.rs
server/src/models/: sqlite.rs
server/src/web/: api.rs
server/src/web/api/: v1.rs
sun_react/: App.js  app.json  package-lock.json  package.json
sun_react/android/: settings.gradle
(+71 files in other folders)
