[package]
name = "server"
version = "0.1.0"
authors = ["Benjamin Bäumler <benjamin.baeumler@qqwa.de>"]
edition = "2018"

[dependencies]
serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"
#actix-web = { git = "https://github.com/actix/actix-web" }
actix = "0.7"
actix-web = "0.7"
futures = "0.1"
env_logger = "0.5"
