[package]
name = "server"
version = "0.1.0"
authors = ["Benjamin Bäumler <benjamin.baeumler@qqwa.de>"]
edition = "2018"

[dependencies]
serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"
rocket = "0.4.0-rc.2"
env_logger = "0.5"
log = "0.4"
fern = { version = "0.5", features = ["colored"] }
chrono = { version = "0.4", features = ["serde"] }

[dependencies.rocket_contrib]
version = "0.4.0-rc.2"
default-features = false
features = ["json"]